; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/hyperv/vmbus/extr_vmbus.c_vmbus_msghc_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/hyperv/vmbus/extr_vmbus.c_vmbus_msghc_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmbus_msghc = type { i32 }
%struct.hypercall_postmsg_in = type { i64, i32, i32 }

@HYPERCALL_POSTMSGIN_DSIZE_MAX = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [22 x i8] c"invalid data size %zu\00", align 1
@HYPERCALL_POSTMSGIN_SIZE = common dso_local global i32 0, align 4
@VMBUS_CONNID_MESSAGE = common dso_local global i32 0, align 4
@HYPERV_MSGTYPE_CHANNEL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vmbus_msghc_reset(%struct.vmbus_msghc* %0, i64 %1) #0 {
  %3 = alloca %struct.vmbus_msghc*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.hypercall_postmsg_in*, align 8
  store %struct.vmbus_msghc* %0, %struct.vmbus_msghc** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @HYPERCALL_POSTMSGIN_DSIZE_MAX, align 8
  %8 = icmp ugt i64 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i64, i64* %4, align 8
  %11 = call i32 @panic(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i64 %10)
  br label %12

12:                                               ; preds = %9, %2
  %13 = load %struct.vmbus_msghc*, %struct.vmbus_msghc** %3, align 8
  %14 = getelementptr inbounds %struct.vmbus_msghc, %struct.vmbus_msghc* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call %struct.hypercall_postmsg_in* @vmbus_xact_req_data(i32 %15)
  store %struct.hypercall_postmsg_in* %16, %struct.hypercall_postmsg_in** %5, align 8
  %17 = load %struct.hypercall_postmsg_in*, %struct.hypercall_postmsg_in** %5, align 8
  %18 = load i32, i32* @HYPERCALL_POSTMSGIN_SIZE, align 4
  %19 = call i32 @memset(%struct.hypercall_postmsg_in* %17, i32 0, i32 %18)
  %20 = load i32, i32* @VMBUS_CONNID_MESSAGE, align 4
  %21 = load %struct.hypercall_postmsg_in*, %struct.hypercall_postmsg_in** %5, align 8
  %22 = getelementptr inbounds %struct.hypercall_postmsg_in, %struct.hypercall_postmsg_in* %21, i32 0, i32 2
  store i32 %20, i32* %22, align 4
  %23 = load i32, i32* @HYPERV_MSGTYPE_CHANNEL, align 4
  %24 = load %struct.hypercall_postmsg_in*, %struct.hypercall_postmsg_in** %5, align 8
  %25 = getelementptr inbounds %struct.hypercall_postmsg_in, %struct.hypercall_postmsg_in* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 8
  %26 = load i64, i64* %4, align 8
  %27 = load %struct.hypercall_postmsg_in*, %struct.hypercall_postmsg_in** %5, align 8
  %28 = getelementptr inbounds %struct.hypercall_postmsg_in, %struct.hypercall_postmsg_in* %27, i32 0, i32 0
  store i64 %26, i64* %28, align 8
  ret void
}

declare dso_local i32 @panic(i8*, i64) #1

declare dso_local %struct.hypercall_postmsg_in* @vmbus_xact_req_data(i32) #1

declare dso_local i32 @memset(%struct.hypercall_postmsg_in*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
